# Standard-DSA-Library-for-C

./: CMakeLists.txt  README.md
Queues/circular_queue/: circular-queue.c  circular_queue.h
algorithms/sorting/: sorting.c  sorting.h
data_structures/deque/: deque.c  deque.h
data_structures/lists/linked_lists/doubly_linked_list/: doublylinklist.c  doublylinklist.h
data_structures/lists/linked_lists/singly_linked_list/: singlylinklist.c  singlylinklist.h
data_structures/lists/vector/: vector.c  vector.h
data_structures/queue/: queue.c  queue.h
data_structures/queues/circular_queue/: circular-queue.c  circular_queue.h
data_structures/stack/: vector_stack.c  vector_stack.h
dynamic_arr/: dynamic_arr.c  dynamic_arr.h  vector.c  vector.h
header_to_include/: std_dsa_lib.h
lists/vector/: vector.c  vector.h
test_code/: test1.c
user_def_header/: std_dsa_lib.h
user_defined_headers/: std_dsa_lib.h  system_headers_req.h
vector/: vector.c  vector.h
